crates/claptrap-core/tests/snapshots/tests__command__author.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_3527492b'
myprog () Me, me@mymain.com - [1mmyprog[0m
EOF_3527492b
exit 0
