crates/claptrap-core/tests/snapshots/tests__command__disable_help_flag-1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_1b8c26b8'
[1m[31merror:[0m unexpected argument '[33m-h[0m' found

[1m[4mUsage:[0m [1mmyprog[0m

For more information, try '[1m--help[0m'.
EOF_1b8c26b8
exit 1
