crates/claptrap-core/tests/snapshots/tests__command__disable_version_flag-1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_e261705d'
[1m[31merror:[0m unexpected argument '[33m-V[0m' found

[1m[4mUsage:[0m [1mmyprog[0m

For more information, try '[1m--help[0m'.
EOF_e261705d
exit 1
