crates/claptrap-core/tests/snapshots/tests__command__disable_version_flag-2.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_29239711'
myprog 1.0.0
EOF_29239711
exit 0
